@@ -652,6 +652,10 @@ class QPDF
     void setTrailer(QPDFObjectHandle obj);
     void read_xref(qpdf_offset_t offset);
     void reconstruct_xref(QPDFExc& e);
+    bool parse_xrefFirst(std::string const& line,
+                         int& obj, int& num, int& bytes);
+    bool parse_xrefEntry(std::string const& line,
+                         qpdf_offset_t& f1, int& f2, char& type);
     qpdf_offset_t read_xrefTable(qpdf_offset_t offset);
     qpdf_offset_t read_xrefStream(qpdf_offset_t offset);
     qpdf_offset_t processXRefStream(
