@@ -1,0 +1,15 @@
+WARNING: xref-errors.pdf (xref table, file position 585): accepting invalid xref table entry
+WARNING: xref-errors.pdf (xref table, file position 606): accepting invalid xref table entry
+WARNING: xref-errors.pdf (xref table, file position 627): accepting invalid xref table entry
+WARNING: xref-errors.pdf (xref table, file position 648): accepting invalid xref table entry
+WARNING: xref-errors.pdf (xref table, file position 667): accepting invalid xref table entry
+checking xref-errors.pdf
+PDF Version: 1.3
+File is not encrypted
+File is not linearized
+1/0: uncompressed; offset = 9
+2/0: uncompressed; offset = 63
+3/0: uncompressed; offset = 135
+4/0: uncompressed; offset = 307
+5/0: uncompressed; offset = 403
+6/0: uncompressed; offset = 438
